artifacts/platform/garage/manifests/apply.yaml
---
# Source: garage/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-headless
  labels:
    helm.sh/chart: garage-0.10.2
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/version: "v2.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 3900
      targetPort: 3900
      protocol: TCP
      name: s3-api
    - port: 3902
      targetPort: 3902
      protocol: TCP
      name: s3-web
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
---
# Source: garage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  labels:
    helm.sh/chart: garage-0.10.2
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/version: "v2.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3900
      targetPort: 3900
      protocol: TCP
      name: s3-api
    - port: 3902
      targetPort: 3902
      protocol: TCP
      name: s3-web
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
---
# Source: garage/templates/workload.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: garage
  labels:
    helm.sh/chart: garage-0.10.2
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/version: "v2.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: garage
      app.kubernetes.io/instance: garage
  replicas: 1
  serviceName: garage-headless
  podManagementPolicy: OrderedReady
  template:
    metadata:
      annotations:
        checksum/config: ed2e7dfa35a94552d7ab501a3fe5366fdad5fc819991e0437e96f9608072f10c
      labels:
        helm.sh/chart: garage-0.10.2
        app.kubernetes.io/name: garage
        app.kubernetes.io/instance: garage
        app.kubernetes.io/version: "v2.4.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: garage
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: garage
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          image: "dxflrs/amd64_garage:v2.4.1"
          imagePullPolicy: IfNotPresent
          command:
            - /garage
          args:
            - server
            - --single-node
          ports:
            - containerPort: 3900
              name: s3-api
            - containerPort: 3902
              name: web-api
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: meta
              mountPath: /mnt/meta
            - name: data
              mountPath: /mnt/data
            - name: etc
              mountPath: /etc/garage.toml
              subPath: garage.toml
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: configmap
          configMap:
            name: garage-config
        - name: etc
          emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: meta
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn-fast"
      resources:
        requests:
          storage: "2Gi"
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn-fast"
      resources:
        requests:
          storage: "20Gi"
---
# Source: garage/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-s3-api
  labels:
    helm.sh/chart: garage-0.10.2
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/version: "v2.4.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "garage-api.home.arpa"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  number: 3900
